complete header section

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <!-- Header with Hero Content  -->
         <div class="header-container">
             <div class="header-content">
-                <header header="header">
+                <header class="header">
                     <span class="logo">Header Logo</span>
-                    <ul class="links">
+                    <div class="links">
                         <li><a href="#" class="link">Header link one</a></li>
                         <li><a href="#" class="link">Header link one</a></li>
                         <li><a href="#" class="link">Header link one</a></li>
-                    </ul>
+                    </div>
                 </header>
                 <div class="hero-container">
                     <div class="hero-group">
@@ -31,7 +31,7 @@
                         <button class="signup-btn">Sign Up</button>
                     </div>
                     <div class="hero-img-container">
-                        <img width="800px" src="./images/technology.jpg" alt="image of technology" class="hero-img">
+                        <!-- <img width="800px" src="./images/technology.jpg" alt="image of technology" class="hero-img"> -->
                     </div>
                 </div>
             </div>
