--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <button class="signup-btn">Sign Up</button>
                     </div>
                     <div class="hero-img-container">
-                        <!-- <img width="800px" src="./images/technology.jpg" alt="image of technology" class="hero-img"> -->
+                        <img  src="./images/landscape.jpg" alt="image of technology" class="hero-img">
                     </div>
                 </div>
             </div>
