complete section 4 - Call to Action

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="hero-group">
                         <h1 class="hero-title">This website is awesome</h1>
                         <p class="hero-descritpion">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                        <button class="signup-btn">Sign Up</button>
+                        <button class="signup-btn btn">Sign Up</button>
                     </div>
                     <div class="hero-img-container">
                         <img  src="./images/landscape.jpg" alt="image of technology" class="hero-img">
@@ -84,7 +84,7 @@
                     <h3 class="call-title">Call to action! It's time!</h3>
                     <p class="call-text">Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <button class="signup-btn-negative">Sign Up</button>
+                <button class="signup-btn-negative btn">Sign Up</button>
             </div>
         </div>
 
