--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <!-- Footer Section -->
         <footer class="footer">
-            <div class="footer-text">Copyright @ The Odin Project 2023</div>
+            <div class="footer-text">Copyright © The Odin Project 2023</div>
         </footer>
     </div>
 </body>
