Add meaningful text. Add hover outline effect on images.

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         <div class="header-container">
             <div class="header-content">
                 <header class="header">
-                    <span class="logo">Header Logo</span>
+                    <span class="logo">Adventure</span>
                     <div class="links">
-                        <li><a href="#" class="link">Header link one</a></li>
-                        <li><a href="#" class="link">Header link one</a></li>
-                        <li><a href="#" class="link">Header link one</a></li>
+                        <li><a href="#" class="link">Packages</a></li>
+                        <li><a href="#" class="link">Locations</a></li>
+                        <li><a href="#" class="link">About</a></li>
                     </div>
                 </header>
                 <div class="hero-container">
                     <div class="hero-group">
-                        <h1 class="hero-title">This website is awesome</h1>
-                        <p class="hero-descritpion">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                        <button class="signup-btn btn">Sign Up</button>
+                        <h1 class="hero-title">The journey matters more than the destination</h1>
+                        <p class="hero-description">Avoiding danger is no safer in the long run than outright exposure. Life is either a daring adventure or nothing</p>
+                        <button class="signup-btn btn">Book Now</button>
                     </div>
                     <div class="hero-img-container">
                         <img  src="./images/landscape.jpg" alt="image of technology" class="hero-img">
@@ -39,31 +39,31 @@
 
         <!-- Section 2 With Cards -->
         <div class="section-two">
-            <h2 class="section-title">Some Random Information</h2>
+            <h2 class="section-title">From The Adventurers</h2>
             <div class="cards">
                 <div class="card">
                     <div class="img-container">
                         <img width="250" src="./images/model-1.jpg" alt="" class="img">
                     </div>
-                    <p class="text">This is some subtext under an illustration or image</p>
+                    <p class="text">Let us step into the night and pursue that flighty adventure.</p>
                 </div>
                 <div class="card">
                     <div class="img-container">
                         <img width="250" src="./images/model-2.jpg" alt="" class="img">
                     </div>
-                    <p class="text">This is some subtext under an illustration or image</p>
+                    <p class="text">Cover the earth before it covers you.</p>
                 </div>
                 <div class="card">
                     <div class="img-container">
                         <img width="250" src="./images/model-3.jpg" alt="" class="img">
                     </div>
-                    <p class="text">This is some subtext under an illustration or image</p>
+                    <p class="text">Jobs fill your pockets, but adventures fill your soul.</p>
                 </div>
                 <div class="card">
                     <div class="img-container">
                         <img width="250" src="./images/model-4.jpg" alt="" class="img">
                     </div>
-                    <p class="text">This is some subtext under an illustration or image</p>
+                    <p class="text">A journey of a thousand miles must begin with a single step.</p>
                 </div>
             </div>
         </div>
@@ -71,8 +71,8 @@
         <!-- Section 3 With Testimonial -->
         <div class="section-three">
             <div class="testimony">
-                <h2 class="testimony-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h2>
-                <h3 class="customer-name">-Thor Odinson</h3>
+                <h2 class="testimony-text">“Why do you go away? So that you can come back. So that you can see the place you came from with new eyes and extra colors. And the people there see you differently, too. Coming back to where you started is not the same as never leaving.”</h2>
+                <h3 class="customer-name">- Terry Pratchet</h3>
             </div>
         </div>
 
@@ -81,16 +81,16 @@
         <div class="section-four">
             <div class="call-card">
                 <div class="call-content">
-                    <h3 class="call-title">Call to action! It's time!</h3>
-                    <p class="call-text">Sign up for our product by clicking that button right over there!</p>
+                    <h3 class="call-title">What are you waiting for?</h3>
+                    <p class="call-text">Make your booking from our extensive catalogue of travel destinations</p>
                 </div>
-                <button class="signup-btn-negative btn">Sign Up</button>
+                <button class="signup-btn-negative btn">Book Now</button>
             </div>
         </div>
 
         <!-- Footer Section -->
         <footer class="footer">
-            <div class="footer-text">Copyright © The Odin Project 2023</div>
+            <div class="footer-text">Copyright © The Adventure 2023</div>
         </footer>
     </div>
 </body>
