Rename logo to The Adventure

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-container">
             <div class="header-content">
                 <header class="header">
-                    <span class="logo">Adventure</span>
+                    <span class="logo">The Adventure</span>
                     <div class="links">
                         <li><a href="#" class="link">Packages</a></li>
                         <li><a href="#" class="link">Locations</a></li>
