add navigation to sections of the page

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <header class="header">
                     <span class="logo">The Adventure</span>
                     <div class="links">
-                        <li><a href="#" class="link">Packages</a></li>
-                        <li><a href="#" class="link">Locations</a></li>
-                        <li><a href="#" class="link">About</a></li>
+                        <li><a href="#section-two" class="link">Adventurers</a></li>
+                        <li><a href="#section-three" class="link">Testimony</a></li>
+                        <li><a href="#section-four" class="link">Booking</a></li>
                     </div>
                 </header>
                 <div class="hero-container">
@@ -39,7 +39,7 @@
         </div>
 
         <!-- Section 2 With Cards -->
-        <div class="section-two">
+        <div class="section-two" id="section-two">
             <h2 class="section-title">From The Adventurers</h2>
             <div class="cards">
                 <div class="card">
@@ -70,7 +70,7 @@
         </div>
         
         <!-- Section 3 With Testimonial -->
-        <div class="section-three">
+        <div class="section-three" id="section-three">
             <div class="testimony">
                 <h2 class="testimony-text">“Why do you go away? So that you can come back. So that you can see the place you came from with new eyes and extra colors. And the people there see you differently, too. Coming back to where you started is not the same as never leaving.”</h2>
                 <h3 class="customer-name">- Terry Pratchet</h3>
@@ -79,7 +79,7 @@
 
 
         <!-- Section 3 With Call Action Card -->
-        <div class="section-four">
+        <div class="section-four" id="section-four">
             <div class="call-card">
                 <div class="call-content">
                     <h3 class="call-title">What are you waiting for?</h3>
