Add github link

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <!-- Footer Section -->
         <footer class="footer">
-            <div class="footer-text">Copyright © The Adventure 2023</div>
+            <a href="https://github.com/pavithiran-saravanan/odin-landing-page" class="footer-text" target="_blank">Github</a>
         </footer>
     </div>
 </body>
